--- a/assets/layouts/_bestGifts.scss
+++ b/assets/layouts/_bestGifts.scss
@@ -65,7 +65,6 @@
     height: 342px;
     border-radius: 20px;
     background-color: $color-content-background;
-
     &:hover {
         cursor: pointer;
 
@@ -136,4 +135,5 @@
 .card__goal {
     @include MontserratHD3();
     color: $color-dark;
+    transition: all 0.3s ease-in-out;
 }
