--- a/assets/layouts/_giftsPage.scss
+++ b/assets/layouts/_giftsPage.scss
@@ -38,6 +38,7 @@
     text-decoration: none;
     @include MontserratAS();
     color: $color-static-white;
+    transition: all 0.4s ease-in-out;
 
     &:hover {
         background-color: rgb(255, 255, 255, 20%);
