--- a/assets/layouts/_header.scss
+++ b/assets/layouts/_header.scss
@@ -50,6 +50,7 @@
     border-radius: 12px;
     @include MontserratAS();
     color: $color-dark;
+    transition: all 0.2s ease-in-out;
     &:hover {
         background-color: $color-nav-hover-bacg;
         color: $color-primary;
