--- a/assets/layouts/_slider.scss
+++ b/assets/layouts/_slider.scss
@@ -114,7 +114,7 @@
 .right:hover {
     background-color: $color-static-white;
     cursor: pointer;
-
+    transition: all 0.4s ease-in-out;
     .arrow-right {
         filter: invert(43%) sepia(12%) saturate(4473%) hue-rotate(323deg)
         brightness(103%) contrast(104%);
