--- a/assets/layouts/_bestGifts.scss
+++ b/assets/layouts/_bestGifts.scss
@@ -65,13 +65,6 @@
     height: 342px;
     border-radius: 20px;
     background-color: $color-content-background;
-    &:hover {
-        cursor: pointer;
-
-        .card__goal {
-            color: $color-primary;
-        }
-    }
 }
 
 .card__image {
@@ -136,4 +129,14 @@
     @include MontserratHD3();
     color: $color-dark;
     transition: all 0.3s ease-in-out;
+}
+
+@media (hover : hover) {
+    .card:hover {
+        cursor: pointer;
+
+        .card__goal {
+            color: $color-primary;
+        }
+    }
 }
