--- a/assets/layouts/_giftsPage.scss
+++ b/assets/layouts/_giftsPage.scss
@@ -39,10 +39,6 @@
     @include MontserratAS();
     color: $color-static-white;
     transition: all 0.4s ease-in-out;
-
-    &:hover {
-        background-color: rgb(255, 255, 255, 20%);
-    }
 }
 
 .active {
@@ -65,5 +61,11 @@
 
     .gifts__navigation__item {
         padding: 12px 8px;
+    }
+}
+
+@media (hover:hover) {
+    .gifts__navigation__item:hover {
+        background-color: rgb(255, 255, 255, 20%);
     }
 }
